# sculk

./: .gitignore  Cargo.toml  README.md
example/: basic.sculk  basic2.sculk
src/: codegen.rs  data.rs  error.rs  lexer.rs  main.rs  parser.rs  type_pool.rs  types.rs
src/backend/: codegen.rs  codegen_old.rs  dpc_backend.rs  function.rs  ir.rs  mod.rs  rebranch.rs  resolve.rs  type_pool.rs  types.rs  validate.rs
