[package]
name = "sculk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
ariadne = "0.3.0"
by_address = "1.1.0"
dpc = "0.2.3"
indexmap = "2.1.0"
itertools = "0.12.0"
logos = "0.12.1"
